Last MDI User, Fix IE Issue, and fix home button on tablet

--- a/css/js-ezrx.css
+++ b/css/js-ezrx.css
@@ -1170,6 +1170,6 @@ html .ui-field-contain>label+.ui-flipswitch, html .ui-popup .ui-field-contain>la
     right: 0px!important;
 }
 
-#commerce .sidebar-handle{
+/* #commerce .sidebar-handle{
     display: none;
-}
+} */
